Sun Sep 12  1999  Nicola Pero  <n.pero@mi.flashnet.it>

        * Source/NSView.m ([-resizeWithOldSuperviewSize:]): Fixed
        difficult bug hunted for months: removed floor() used in the
        middle of the computation of widths and heights.  Widths and
        heights are float, and must not to be arbitrarily rounded to
        integers in the middle of a computation.  This bug would cause
        obscure, very little, misalignment in various views after resize.
        The misalignments could become appreciable and ugly after repeated
        resizes.

Sun Sep 12  1999  Nicola Pero  <n.pero@mi.flashnet.it>

        * Source/NSImageCell.m ([-cellSize]): added method.
        ([-drawingRectForBounds:]): added method.
        ([-drawInteriorWithFrame:inView:]): usual bug fix (see Sep 11).

1999-09-11  David Lazaro Saz <khelekir@encomix.es>

       	* Headers/gnustep/gui/NSGraphics.h: Changed parameter declaration
	of bordered rectangle drawing functions to conform with MacOS X
	specs.

1999-09-11  Michael Hanni   <mhanni@sprintmail.com>

	* Source/NSMenu.m: many small fixes and optimizations for quicker
	display. In addition several small fixes which should improve
	functionality as well as usablity.
	* Source/NSMenuView.m: ditto.
	* Source/NSHelpManager.m: a small bugfix to allow for compilation.

1999-09-11  Pedro Ivo Andrade Tavares  <ptavares@iname.com>

        * NSResponder.m ([NSResponder -helpRequested:]): 
        Now the application exits context help mode regardless of whether
        help was shown or not. Without it, the app would do nothing while
        the user didn't click on a control with help, and would appear
	broken.
        * NSHelpManager.m
        ([NSBundle -contextHelpForKey:]): implemented. See below.
        ([NSApplication -showHelp:]): implemented. See below.
        ([NSHelpManager -contextHelpForObject:]): minor change.

        Context Help for an application is stored in a file called